# testpack-fibonacci

./: CMakeLists.txt
include/: fibonacci.h
test/: CMakeLists.txt  main.cpp
